tests/snapshots/diagnostics__.__tests__invalid__bitfield_address.c.snap
---
source: tests/diagnostics.rs
expression: "&log"
---
stderr: "error: cannot take address of bitfield\n  --> ./tests/invalid/bitfield_address.c:3:3\n    |\n  3 |   &s.x;\n    |   ^\n\n"
status: 1
