tests/snapshots/diagnostics__.__tests__invalid__error_directive.c.snap
---
source: tests/diagnostics.rs
expression: "&log"
---
stderr: "error: error\n  --> ./tests/invalid/error_directive.c:1:2\n    |\n  1 | #error fail\n    |  ^\n\n"
status: 1
