tests/snapshots/diagnostics__.__tests__invalid__missing_semicolon.c.snap
---
source: tests/diagnostics.rs
expression: "&log"
---
stderr: "error: expected ';'\n  --> ./tests/invalid/missing_semicolon.c:3:1\n   |\n  3 | }\n    | ^\n\n"
status: 1
